syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

package ds_audit_log;

message DsAuditLog {

    int32 id= 1;
    int32 user_id=2;
    int32 resource_DsAuditLog=3;
    int32 operation= 4;
    optional string time=5;
    int32 resource_id= 6;
}


// Generated according to https://cloud.google.com/apis/design/standard_methods
service DsAuditLogService {
  rpc ListDsAuditLogs(ListDsAuditLogsRequest) returns (ListDsAuditLogsResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/DsAuditLogs"
    };
  }

  rpc GetDsAuditLog(GetDsAuditLogRequest) returns (DsAuditLog) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=DsAuditLogs/*}"
    };
  }

  rpc CreateDsAuditLog(CreateDsAuditLogRequest) returns (DsAuditLog) {
    option (google.api.http) = {
      post: "/v1alpha1/DsAuditLogs"
      body: "DsAuditLog"
    };
  }

  rpc UpdateDsAuditLog(UpdateDsAuditLogRequest) returns (DsAuditLog) {
    option (google.api.http) = {
      patch: "/v1alpha1/{DsAuditLog.name=DsAuditLogs/*}"
      body: "DsAuditLog"
    };
  }

  rpc DeleteDsAuditLog(DeleteDsAuditLogRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1alpha1/{name=DsAuditLogs/*}"
    };
  }
}

// message DsAuditLog {
// ! This should be defined elsewhere
// }

message ListDsAuditLogsRequest {


  // The maximum number of items to return.
  int32 page_size = 1;

 int32 page_num = 2;
}

message ListDsAuditLogsResponse {
  // The field name should match the noun "DsAuditLog" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated DsAuditLog DsAuditLogs = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetDsAuditLogRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateDsAuditLogRequest {
  // The parent resource name where the DsAuditLog is to be created.
  string parent = 1;

  // The DsAuditLog id to use for this DsAuditLog.
  string DsAuditLog_id = 2;

  // The DsAuditLog resource to create.
  // The field name should match the Noun in the method name.
  DsAuditLog DsAuditLog = 3;
}

message UpdateDsAuditLogRequest {
  // The DsAuditLog resource which replaces the resource on the server.
  DsAuditLog DsAuditLog = 1;

  // The update mask applies to the resource. For the `google.protobuf.FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#google.protobuf.FieldMask
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteDsAuditLogRequest {
  // The resource name of the DsAuditLog to be deleted.
  string name = 1;
}
